--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,10 +6,13 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">설정</string>
+    <string name="action_node">서식 관리</string>
+
 
     <!-- Strings related to Settings -->
     <string name="setting_category_1">접속 정보</string>
     <string name="setting_category_2">인증 정보</string>
+    <string name="setting_category_4">파일 관리</string>
     <string name="setting_category_3">어플리케이션 정보</string>
 
     <string name="setting_ip">접속 IP 주소</string>
@@ -17,6 +20,7 @@
     <string name="default_value">andcom.iptime.org</string>
     <string name="setting_port">외부 접속 포트</string>
     <string name="setting_phone">전화 번호</string>
+    <string name="setting_node">서식 삭제</string>
 
     <string name="setting_version">버전 정보</string>
     <string name="setting_teamviewer">원격 지원 받기</string>
